static/css/style.css
body{
    padding-top:70px;
}
body.install{
    padding-top:20px;
}
.label-status-on{
    background-color: #468847;
}
.label-status-off{
   background-color: #B94A48;
}
.label a{
    color:#FFF;
    text-decoration:none;
}
.top_buutons{
    text-align:right;
    padding:10px 0px 10px 0px;
}
.footer{
    margin-top:20px;
    border-top:1px solid #EEEEEE;
    padding-top:10px;
}
.footer a{
    font-weight:bold;
}
div.tabbable ul.nav-tabs li{
    font-weight:bold;
}
legend{
    border-color: -moz-use-text-color -moz-use-text-color #CCCCCC;
}
.form-actions {
    background-color: transparent;
}

.form-signin {
	max-width: 300px;
	padding: 19px 29px 29px;
	margin: 0 auto 20px;
	background-color: #fff;
	border: 1px solid #e5e5e5;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
	box-shadow: 0 1px 2px rgba(0,0,0,.05);
}
.form-signin .form-signin-heading,
.form-signin .checkbox {
	margin-bottom: 10px;
}
.form-signin input[type="text"],
.form-signin input[type="password"] {
	font-size: 16px;
	height: auto;
	margin-bottom: 15px;
	padding: 7px 9px;
}

